# ssc4

./: cosign.key  cosign.pub  cyclonedx-sbom.json  pyproject.toml
.github/workflows/: ci.yml
src/scantool/: __init__.py  scanner.py
tests/: test_basic.py
